[gd_scene load_steps=9 format=2]

[ext_resource path="res://theme/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://scenes/WrittenLogContainer.tscn" type="PackedScene" id=3]
[ext_resource path="res://theme/small_title_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/Clock/Clock.tscn" type="PackedScene" id=5]
[ext_resource path="res://theme/title_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://theme/digits_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://scenes/TaskControl/TaskControl.tscn" type="PackedScene" id=8]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BackgroundPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 327.0
margin_top = 235.0
margin_right = 480.0
margin_bottom = 263.0
rect_pivot_offset = Vector2( 40, 173 )
text = "Water Collected"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaterCollected" type="Label" parent="."]
margin_left = 344.0
margin_top = 188.0
margin_right = 459.0
margin_bottom = 236.0
rect_pivot_offset = Vector2( 23, 220 )
custom_fonts/font = ExtResource( 7 )
text = "0.0 L"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label10" type="Label" parent="."]
margin_left = 321.0
margin_top = 416.0
margin_right = 474.0
margin_bottom = 444.0
rect_pivot_offset = Vector2( 313, -15 )
text = "Leaves Collected"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeavesCollected" type="Label" parent="."]
margin_left = 312.0
margin_top = 369.0
margin_right = 480.0
margin_bottom = 417.0
rect_pivot_offset = Vector2( 322, 32 )
custom_fonts/font = ExtResource( 7 )
text = "0.0 Kg"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label11" type="Label" parent="."]
margin_left = 571.0
margin_top = 417.0
margin_right = 724.0
margin_bottom = 445.0
rect_pivot_offset = Vector2( 313, -15 )
text = "Leaves Dried"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeavesDried" type="Label" parent="."]
margin_left = 562.0
margin_top = 370.0
margin_right = 730.0
margin_bottom = 418.0
rect_pivot_offset = Vector2( 322, 32 )
custom_fonts/font = ExtResource( 7 )
text = "0.0 G"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 49.0
margin_top = 228.0
margin_right = 152.0
margin_bottom = 256.0
text = "Well Water"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WellWaterLevel" type="Label" parent="."]
margin_left = 47.0
margin_top = 179.0
margin_right = 155.0
margin_bottom = 227.0
custom_fonts/font = ExtResource( 7 )
text = "0.0 L"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 744.0
margin_top = 234.0
margin_right = 874.0
margin_bottom = 262.0
text = "Water Boiled"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaterBoiled" type="Label" parent="."]
margin_left = 730.0
margin_top = 182.0
margin_right = 868.0
margin_bottom = 230.0
custom_fonts/font = ExtResource( 7 )
text = "0.0 L"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 875.0
margin_top = 393.0
margin_right = 976.0
margin_bottom = 421.0
text = "Tea Steeped"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TeaSteeped" type="Label" parent="."]
margin_left = 854.0
margin_top = 342.0
margin_right = 1020.0
margin_bottom = 390.0
custom_fonts/font = ExtResource( 7 )
text = "0.0 L"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -188.5
margin_top = 16.0
margin_right = 188.5
margin_bottom = 98.0
custom_fonts/font = ExtResource( 6 )
text = "Tea Time"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SmallTitle" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -191.0
margin_top = 89.0
margin_right = 186.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 4 )
text = "All the time"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label8" type="Label" parent="."]
margin_left = 50.0
margin_top = 401.0
margin_right = 153.0
margin_bottom = 429.0
rect_pivot_offset = Vector2( 0, 125 )
text = "Leaves"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WellWaterLevel2" type="Label" parent="."]
margin_left = 48.0
margin_top = 352.0
margin_right = 156.0
margin_bottom = 400.0
rect_pivot_offset = Vector2( 51, 174 )
custom_fonts/font = ExtResource( 7 )
text = "High"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SteepButton" type="Button" parent="."]
margin_left = 771.0
margin_top = 369.0
margin_right = 829.0
margin_bottom = 396.0
text = "Steep"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DryButton" type="Button" parent="."]
margin_left = 495.0
margin_top = 388.0
margin_right = 553.0
margin_bottom = 415.0
text = "Dry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WrittenLogContainer" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
margin_left = 563.0
margin_top = 460.0
margin_right = 1022.0
margin_bottom = -1.0

[node name="SteepClock" parent="." instance=ExtResource( 5 )]
margin_left = 736.0
margin_top = 314.0
margin_right = 866.0
margin_bottom = 448.0
clock_color = Color( 0.231373, 0.231373, 0.231373, 0.501961 )
shadow_color = Color( 1, 1, 1, 0 )
wait_time = 5.0

[node name="DryClock" parent="." instance=ExtResource( 5 )]
margin_left = 461.0
margin_top = 329.0
margin_right = 591.0
margin_bottom = 463.0
clock_color = Color( 0.231373, 0.231373, 0.231373, 0.501961 )
shadow_color = Color( 1, 1, 1, 0 )
wait_time = 5.0

[node name="DryingLevel" type="Label" parent="."]
visible = false
margin_left = 490.0
margin_top = 371.0
margin_right = 559.0
margin_bottom = 419.0
custom_fonts/font = ExtResource( 7 )
text = "0.0 Kg"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaterCollectControl" parent="." instance=ExtResource( 8 )]
margin_left = 237.0
margin_top = 200.0
margin_right = 237.0
margin_bottom = 200.0
task_name = "Collect"
task_options = [ "1 L" ]
button_min_size = 32.0

[node name="WaterBoilControl" parent="." instance=ExtResource( 8 )]
margin_left = 573.0
margin_top = 207.0
margin_right = 573.0
margin_bottom = 207.0
task_name = "Boil"
task_options = [ "1 L" ]
button_min_size = 32.0

[node name="LeavesCollectControl" parent="." instance=ExtResource( 8 )]
margin_left = 235.0
margin_top = 379.0
margin_right = 235.0
margin_bottom = 379.0
task_name = "Collect"
task_options = [ "Near", "Far" ]
button_min_size = 48.0

[connection signal="pressed" from="SteepButton" to="." method="_on_SteepButton_pressed"]
[connection signal="pressed" from="DryButton" to="." method="_on_DryButton_pressed"]
[connection signal="button_pressed" from="WaterCollectControl" to="." method="_on_WaterCollectControl_button_pressed"]
[connection signal="button_pressed" from="WaterBoilControl" to="." method="_on_WaterBoilControl_button_pressed"]
[connection signal="button_pressed" from="LeavesCollectControl" to="." method="_on_LeavesCollectControl2_button_pressed"]
